--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.2.2",
     "tslint": "^4.0.2",
-    "typescript": "^2.0.10",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
