--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "sourceMap": true,
         "module": "commonjs",
-        "target": "es6",
+        "target": "es5",
         "jsx": "react",
+        "lib": ["dom", "es6"],
         "strictNullChecks": true
     },
     "include": [
