--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^0.14.19",
     "@types/whatwg-fetch": "^0.0.32",
     "clean-webpack-plugin": "^0.1.10",
+    "css-loader": "^0.26.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "immutability-helper": "^2.0.0",
@@ -25,6 +26,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "ts-loader": "^1.2.2",
     "tslint": "^4.0.2",
     "typescript": "2.0.10",
