--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "typescript.tsdk": "./node_modules/typescript/lib",
   "editor.tabSize": 2,
-  "editor.insertSpaces": false
+  "editor.insertSpaces": true
 }
