--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/immutability-helper": "^2.0.15",
     "@types/mapbox-gl": "^0.27.0",
     "@types/moment": "^2.13.0",
-    "@types/react": "^0.14.50",
+    "@types/react": "^0.14.54",
     "@types/react-dom": "^0.14.19",
     "@types/whatwg-fetch": "^0.0.32",
     "clean-webpack-plugin": "^0.1.10",
@@ -27,9 +27,9 @@
     "react-dom": "^15.2.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "ts-loader": "^1.2.2",
+    "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
-    "typescript": "2.0.10",
+    "typescript": "^2.1.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
