--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.0",
+    "tslib": "^1.2.0",
     "tslint": "^4.0.2",
     "typescript": "^2.1.4",
     "url-loader": "^0.5.7",
