--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dist": "webpack",
-    "lint": "tslint 'src/**/*.tsx' --fix",
+    "lint": "tslint 'src/**/*.ts*' --fix",
     "dev": "webpack-dev-server --https --history-api-fallback"
   },
   "author": "Alexander Ekdahl",
@@ -30,6 +30,7 @@
     "ts-loader": "^1.3.0",
     "tslib": "^1.2.0",
     "tslint": "^4.0.2",
+    "tslint-react": "^2.0.0",
     "typescript": "^2.1.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
