--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "lib": ["dom", "es5", "es2015.symbol", "es2015.iterable", "es2015.promise", "es2015.core"],
         "strictNullChecks": true,
         "importHelpers": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "noUnusedLocals": true
     },
     "include": [
         "src/**/*"
