--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^15.2.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "svg-inline-loader": "^0.7.1",
     "ts-loader": "^1.3.0",
     "tslib": "^1.2.0",
     "tslint": "^4.0.2",
