--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,15 @@
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "lib": ["dom", "es5", "es2015.symbol", "es2015.iterable", "es2015.promise", "es2015.core"],
+        "lib": [
+            "dom",
+            "es5",
+            "es2015.symbol",
+            "es2015.iterable",
+            "es2015.promise",
+            "es2015.core"
+        ],
+        "skipLibCheck": true,
         "strictNullChecks": true,
         "importHelpers": true,
         "noImplicitAny": true,
